# wasp

./: .gitignore  CHANGELOG.md  CITATION.cff  GUIA_USO.md  README.md  RESULTADOS_E_DISCUSSOES.md  TRANSFORMACAO_CONCLUIDA.md  pyproject.toml
data/: 41001w2020.nc  ww3_41001.nc
docs/: processing_guide.md
examples/: 01_partition_sar.py  02_partition_ww3.py  03_partition_ndbc.py  04_validate.py  README.md  cfosat_spec.ipynb  config.yaml  ndbc_spec.ipynb  sentinel_spec.ipynb  ww3_spec.ipynb
notebooks/: checking_sar_algorithm.ipynb  config.yaml  download_sar_sentinel.ipynb  ndbcspec.ipynb  sarspec.ipynb  ww3spec.ipynb
scripts/: process-allsar-native.py  process-allsar.py  process-allww3.py  validation.py
src/wasp/: __init__.py  io_cfosat.py  io_ndbc.py  io_ww3.py  partition.py  plotting.py  utils.py  wave_params.py
