[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasp"
version = "0.1.0"
description = "Wave Analysis from Sentinel and WaveWatch III Partitioning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["waves", "oceanography", "SAR", "WaveWatch3", "spectral partitioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=2.1.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scipy>=1.14.0,<2.0.0",
    "xarray>=2024.11.0",
    "netCDF4>=1.5.4,<2.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "scikit-image>=0.22.0,<1.0.0",
    "tqdm>=4.65.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/jtcarvalho/wasp"
Repository = "https://github.com/jtcarvalho/wasp"
Documentation = "https://github.com/jtcarvalho/wasp/blob/main/README.md"
Issues = "https://github.com/jtcarvalho/wasp/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["wasp"]

[tool.setuptools.package-data]
wasp = ["*.py"]
